src/app/deviceset/change-device-dialog/change-device-dialog.component.css
.available-devices-input {
    width: 35ch;
    margin-top: 10px;
    margin-bottom: 10px;
}

.note {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
}

::ng-deep .mat-divider {
    /* CSS styles go here */
    margin: 5px; /* for example to remove the margin */
}

::ng-deep .mat-dialog-title {
    /* CSS styles go here */
    margin: 0px; /* for example to remove the margin */
}

